# ai-cookbook

./: .gitignore  README.md  agent-mcp-basic.ipynb
advanced_rag/: README.md  config.py  main.py  modules.py  pyproject.toml  retrieval.py
advanced_rag/src/: config.py  dataset.py  knowledge.py  llm.py  retrieval.py  visualization.py
agent_rag/: README.md  config.py  main.py  modules.py  pyproject.toml
agent_text_to_sql/: README.md  config.py  database.py  main.py  modules.py  pyproject.toml  resources.py
etc/: effective-agent.ipynb  pyproject.toml  serverless_api.ipynb  structured_generation.ipynb
mcp-quickstart/: README.md  client-agent.py  client-chat.py  config.py  pyproject.toml  server.py
rag_base/: README.md  config.py  dataset.py  evaluator.py  knowledge.py
structured_generation/: notebook.ipynb  pyproject.toml
