[project]
name = "agent-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.3.2",
    "faiss-cpu>=1.10.0",
    "fire>=0.7.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "sentence-transformers>=3.4.1",
    "smolagents>=1.9.2",
]
