[project]
name = "structured-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.5.2",
    "huggingface-hub>=0.29.3",
    "ipykernel>=6.29.5",
    "outlines>=0.2.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
]
